working with vue

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,8 +3,8 @@
 @import "modules/_main.scss";
 
 // try font-awesome import
-@import "modules/font-awesome/scss/fontawesome.scss";
-@import "modules/font-awesome/scss/solid.scss";
+// @import "modules/font-awesome/scss/fontawesome.scss";
+// @import "modules/font-awesome/scss/solid.scss";
 
 // components
 @import "modules/_mail.scss";
