--- a/sass/modules/_mail.scss
+++ b/sass/modules/_mail.scss
@@ -19,21 +19,27 @@ input[type=text], input[type=email], input[type=tel], textarea {
 input[type=submit] {
     display: block;
     margin-top: 2em;
-    padding: 0.75rem 1rem;
+    padding: 0.75rem 3.3rem 0.75rem 0.75rem;
     border-radius: 0.5rem;
     background-color: #78abeb;
     cursor: pointer;
     font-size: 1.2em;
     color: white;
+    font-weight: bolder;
 
     &:hover { background-color: #5588c8}
 }
 
-input[type=submit]::after {   
-    content:"\f1d9";
-    font-family: FontAwesome;
-    color: white;
-    font-size: 2em;
+.wrapper {
+    position: relative;
+
+    i { 
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 60px;
+        font-size: 1.5em;
+    }
 }
 
 textarea { resize: none; display: block; }
